# Raptor-T

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  attention.cu  attention.h  build.sh  test.cpp
layers/: CMakeLists.txt  bert_attention.cpp  bert_attention.h  bert_intermediate.cpp  bert_intermediate.h  bert_output.cpp  bert_output.h  bert_pooler.cpp  bert_pooler.h  build.sh  metadata.cpp  metadata.h  multi_headed_attention.cpp  multi_headed_attention.h  semaphore.cpp  semaphore.h  tensor_set.cpp  tensor_set.h  test.cpp
layers/kernels/: CMakeLists.txt  a_a.cu  add_bias_act.cu  add_bias_and_layernorm.cu  add_bias_and_transpose.cu  attention.cu  attention_1.cu  attention_2.cu  attention_3.cu  fine_grain_kernel.cu  kernel.h  mat_mul.cpp  mat_mul.h  pipeline_mha.cu  pipeline_mha.cuh  sparse_attention.cu  sparse_attention_new.cu  temp.cu  test.cpp  test.cu
python/: a.sh  benchmark.py  ft_longformer.py  modeling_bert.py  modeling_big_bird.py  pybind.cpp  setup.py  test.py  test_flash_attn.py  util.py
python/benchmark/: CTAs_num_test.py  CTAs_num_test.sh  async.sh  async_.py  attention_test.py  attention_test.sh  end2end  end2end.py  end2end.sh  kernel_fusion_mem_op.py  mem_bound_op.py  mem_bound_op.sh
python/benchmark/metrics/: CTAs_num_test  async  async_  attention_test  end2end  kernel_fusion_mem_op
